--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
+title: "Aleksander Duda - Portfolio"
+description: "Student informatyki na WIT | Backend Developer (czasem Fullstack)"
+theme: jekyll-theme-cayman
 
