--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: "Aleksander Duda - Portfolio"
-description: "Student informatyki na WIT | Backend Developer (czasem Fullstack)"
-theme: jekyll-theme-cayman
+description: "Student informatyki na WIT / Computer Science student at WIT | Backend/Full-Stack Developer"
+theme: jekyll-theme-hacker
 
